# nmaci

./: .all-contributorsrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
chatify/: requirements.txt
scripts/: extract_links.py  find_unreferenced_content.py  generate_book.py  generate_book_dl.py  generate_book_precourse.py  generate_tutorial_readmes.py  lint_tutorial.py  make_pr_comment.py  parse_html_for_errors.py  process_notebooks.py  select_notebooks.py  verify_exercises.py
scripts/chatify/: process_notebooks.py
src/nmaci/: __main__.py  cli.py  find_unreferenced_content.py  generate_book.py  generate_book_dl.py  generate_book_precourse.py  generate_tutorial_readmes.py  parse_html_for_errors.py  process_notebooks.py  select_notebooks.py
tests/: test_process_notebooks.py
tests/tutorials/: raises_notimplemented_error.ipynb
tutorials/: raises_name_error.ipynb
