[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nmaci"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "nbformat",
    "nbconvert",
    "notebook",
    "pillow",
    "flake8",
    "fuzzywuzzy[speedup]",
    "pyyaml",
    "beautifulsoup4",
    "decorator==5.0.9",
    "Jinja2==3.0.0",
    "jupyter-client",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
nmaci = "nmaci.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nmaci"]
